--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -54,6 +54,9 @@
           </li>
         </ul>
       </div><!-- /.navbar-collapse -->
+      <div class="row" id="viewContainer">
+
+      </div>
     </div><!-- /.container-fluid -->
   </nav>
 </div>
