adds gulp task for development

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -58,11 +58,9 @@
 
     </div><!-- /.container-fluid -->
   </nav>
-    <div class="row" id="viewContainer">
-ciao
-    </div>
+    <div class="row" id="viewContainer"></div>
 
-    <script src="../../javascript/components/HelloMessage.js" type="text/javascript"></script>
+    <script src="../../javascripts/components/HelloMessage.js" type="text/javascript"></script>
 
 
 </div>
