--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -62,6 +62,8 @@
 
     <script src="../../javascripts/components/Offer.js" type="text/javascript"></script>
     <script src="../../javascripts/components/OfferBox.js" type="text/javascript"></script>
+    <script src="../../javascripts/components/listOfBoxes.js" type="text/javascript"></script>
+
 
 
 </div>
