--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,6 +6,7 @@
   <link href="../../stylesheets/bootstrap.min.css" rel="stylesheet"/>
     <script type="text/javascript" src="../../javascripts/jquery.min.js"></script>
     <script type="text/javascript" src="../../javascripts/react.js"></script>
+    <script type="text/javascript" src="../../javascripts/marked.min.js"></script>
     <script type="text/javascript" src="../../javascripts/bootstrap.min.js"></script>
     <script type="text/javascript" src="../../javascripts/moment.js"></script>
 </head>
