--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,69 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <title>Lorenc Shop</title>
-  <link href="../../stylesheets/bootstrap.min.css" rel="stylesheet"/>
+  <link href="../../stylesheets/main.css" rel="stylesheet"/>
     <script type="text/javascript" src="../../javascripts/jquery.min.js"></script>
     <script type="text/javascript" src="../../javascripts/react.js"></script>
     <script type="text/javascript" src="../../javascripts/marked.min.js"></script>
-    <script type="text/javascript" src="../../javascripts/bootstrap.min.js"></script>
     <script type="text/javascript" src="../../javascripts/moment.js"></script>
 </head>
 <body>
-<div class="container-fluid">
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">LorencShop</a>
-      </div>
+<header>
+  <nav class="ls-navbar">
+    <ul>
+      <li>na1</li>
+      <li>na2</li>
+      <li>na3</li>
 
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li><a href="#"><%= Date.now(); %> <span class="sr-only"></span></a></li>
-
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Product <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="/viewProduct">view Product</a></li>
-              <li><a href="/createProduct">create Product</a></li>
-
-            </ul>
-          </li>
-        </ul>
-        <form class="navbar-form navbar-left" role="search">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search offers">
-          </div>
-          <button type="submit" class="btn btn-default">Submit</button>
-        </form>
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Username</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">User <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="/viewProfile">View Profile</a></li>
-              <li><a href="/modifyProfile">Modify Profile</a></li>g
-            </ul>
-          </li>
-        </ul>
-      </div><!-- /.navbar-collapse -->
-
-    </div><!-- /.container-fluid -->
+    </ul>
   </nav>
-    <div class="row" id="viewContainer"></div>
+</header>
+    <div class="" id="viewContainer"></div>
 
     <script src="../../javascripts/components/Offer.js" type="text/javascript"></script>
     <script src="../../javascripts/components/OfferBox.js" type="text/javascript"></script>
     <script src="../../javascripts/components/listOfBoxes.js" type="text/javascript"></script>
-
-
 
 </div>
 </body>
