--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,9 +13,12 @@
 <header>
   <nav class="ls-navbar">
     <ul>
-      <li>na1</li>
-      <li>na2</li>
-      <li>na3</li>
+      <li>home</li>
+      <li>
+        <input type="search" name="search" value="">
+      </li>
+      <li>signin</li>
+      <li>about us</li>
 
     </ul>
   </nav>
