--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,15 +11,11 @@
 </head>
 <body>
 <header>
-  <nav class="ls-navbar">
-    <ul>
-      <li>home</li>
-      <li>
-        <input type="search" name="search" value="">
-      </li>
-      <li>signin</li>
-      <li>about us</li>
-
+  <nav >
+    <ul class="ls-navbar">
+      <li class="ls-navbar__item ls-navbar__item--home"> <a href="">home</a></li>
+      <li class="ls-navbar__item ls-navbar__item--signin"> <a href="">signin </a></li>
+      <li class="ls-navbar__item ls-navbar__item--about"> <a href="">about us</a></li>
     </ul>
   </nav>
 </header>
