--- a/styles/components/_navbar.scss
+++ b/styles/components/_navbar.scss
@@ -1,15 +1,38 @@
-$ls-color-primary: #df1313;
+$ls-green-primary: #318817;
+$ls-green-secondary: #2ded85;
+$ls-white-primary: #e4d7d7;
 .ls-navbar{
 
   list-style: none;
 	text-transform: uppercase;
+	width: 100%;
 
-  &__item{
+	li {
+		display: inline-block;
+		vertical-align: middle;
+	}
 
-    background-color: red;
+   &__item{
+	border: 1px solid $ls-green-primary;
+	border-radius: 20px;
+	padding: 20px;
+	margin: 10px;
 
-    &--login{
-      color: red;
+	&:hover{
+		background-color: $ls-green-secondary;
+		color: white;
+		border: 1px solid $ls-white-primary;
+	}
+
+    &--signin{
+      color: green;
     }
+		&--home {
+			color: blue
+		}
+
+		&--about {
+			color: blue
+		}
   }
 }
