--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,9 +13,12 @@
 <header>
   <nav >
     <ul class="ls-navbar">
-      <li class="ls-navbar__item ls-navbar__item--home"> <a href="">home</a></li>
-      <li class="ls-navbar__item ls-navbar__item--signin"> <a href="">signin </a></li>
-      <li class="ls-navbar__item ls-navbar__item--about"> <a href="">about us</a></li>
+      <li class="ls-navbar__item ls-navbar__item--home"> <a class="ls-button ls-button--primary"  href="">home</a></li>
+      <li class="ls-navbar__item"></li>
+      <li class="ls-navbar__item ls-navbar__item--signin">
+				 <a class="ls-button ls-button--primary" href="">signin </a>
+				<a class="ls-button ls-button--primary"  href="">SignOut</a>
+			</li>
     </ul>
   </nav>
 </header>
