--- a/styles/components/_navbar.scss
+++ b/styles/components/_navbar.scss
@@ -5,9 +5,15 @@ $ls-white-primary: #e4d7d7;
 
 	text-transform: uppercase;
 	width: 100%;
+	display: table;
+	vertical-align: middle;
+	border-collapse: separate;
+	border-spacing: 10px 0px;
+	background-color: #41717e;
 
 	li {
-		display: inline-block;
+
+		display: table-cell;
 		vertical-align: middle;
 	}
 
@@ -19,34 +25,22 @@ $ls-white-primary: #e4d7d7;
 
 	}
 
-   &__item{
-	border: 1px solid $ls-green-primary;
-	border-radius: 20px;
-	padding: 20px;
-	margin: 10px;
+  &__item{
 	text-align: center;
 
 	@media screen and (max-width:400px) {
-
 		padding: 50px;
 }
 
-
-	&:hover{
-		background-color: $ls-green-secondary;
-		color: white;
-		border: 1px solid $ls-white-primary;
-	}
-
     &--signin{
-      color: green;
+      text-align: right;
     }
 		&--home {
-			color: blue
+			text-align: left;
 		}
 
 		&--about {
-			color: blue
+			color: blue;
 		}
   }
 }
