--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -210,11 +210,11 @@ h5 {
 
 a {
   transition: color 0.2s ease;
-	  color     : #d55b16;
+	  color     : #838383;
 }
 
 a:hover {
   text-decoration: none;
-	color          : #ba3a23;
+	color          : #4f4b4b;
 
 }
