--- a/styles/base/_buttons.scss
+++ b/styles/base/_buttons.scss
@@ -1,5 +1,5 @@
-$ls-primary-color: rgb(49, 201, 101);
-$ls-primary-color--hover: rgb(34, 139, 70);
+$ls-primary-color: #bcece2;
+$ls-primary-color--hover: rgba(#97c1b8, 0.99);
 
 .ls-button{
 	display: inline-block;
