ads basic reactjs login component

--- a/views/login/index.ejs
+++ b/views/login/index.ejs
@@ -1,1 +1,9 @@
-<% include layout %>
+<!DOCTYPE html>
+<html>
+<% include ../partials/header %>
+	<body>
+		<div id="viewContainer"></div>
+	</body>
+
+  <script type="text/javascript" src="../../javascripts/components/Login.js"></script>
+</html>
