--- a/views/login/index.ejs
+++ b/views/login/index.ejs
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <% include ../partials/header %>
+
 	<body>
 		<div id="viewContainer"></div>
+		<% include ../partials/footer %>
+		<script type="text/javascript" src="../../javascripts/components/Login.js"></script>
 	</body>
 
-  <script type="text/javascript" src="../../javascripts/components/Login.js"></script>
 </html>
