adds gulp notifz

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,6 +2,7 @@
   <meta charset="UTF-8">
   <title>Lorenc Shop</title>
   <link href="../../stylesheets/main.css" rel="stylesheet"/>
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <script type="text/javascript" src="../../javascripts/jquery.min.js"></script>
     <script type="text/javascript" src="../../javascripts/react.js"></script>
     <script type="text/javascript" src="../../javascripts/marked.min.js"></script>
