--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -192,11 +192,14 @@ a:hover {
   text-decoration: none;
   color: #4f4b4b; }
 
+.view-container {
+  width: 100%; }
+
 .ls-button {
   display: inline-block;
   vertical-align: middle;
   border-radius: 10px;
-  padding: 20px;
+  padding: 10px;
   margin: 10px;
   background-color: #bcece2; }
   .ls-button:hover {
@@ -237,3 +240,9 @@ a:hover {
   background-color: #406f7c;
   text-align: center;
   padding: 10px; }
+
+.login-container {
+  display: table;
+  vertical-align: middle;
+  margin-right: auto;
+  margin-left: auto; }
