--- a/views/login/index.ejs
+++ b/views/login/index.ejs
@@ -4,9 +4,8 @@
 <% include ../partials/header %>
 
 	<body>
-		<div id="viewContainer"></div>
+		<div id="viewContainer" class="view-container"></div>
 		<% include ../partials/footer %>
 		<script type="text/javascript" src="../../javascripts/components/Login.js"></script>
 	</body>
-
 </html>
