--- a/views/platform/index.ejs
+++ b/views/platform/index.ejs
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>platform</title>
-  </head>
+  <% include ../partials/header %>
   <body>
 
-    welcome to the platform
+    <div id="viewContainer" class="view-container"></div>
+
+    <% include ../partials/footer %>
+
+    <script type="text/javascript" src="../../javascripts/components/Offer.js"></script>
+    <script type="text/javascript" src="../../javascripts/components/OfferBox.js"></script>
+    <script type="text/javascript" src="../../javascripts/components/ListOfBoxes.js"></script>
+
   </body>
 </html>
