--- a/views/platform/index.ejs
+++ b/views/platform/index.ejs
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <% include ../partials/header %>
+<% include ../partials/header%>
   <body>
 
-    <div id="viewContainer" class="view-container"></div>
+    <div id="viewContainer" class="view-container">
+      <div class="" id="navbar">
 
+      </div>
+    </div>
     <% include ../partials/footer %>
-
-    <script type="text/javascript" src="../../javascripts/components/Offer.js"></script>
-    <script type="text/javascript" src="../../javascripts/components/OfferBox.js"></script>
-    <script type="text/javascript" src="../../javascripts/components/ListOfBoxes.js"></script>
-
+    <script type="text/javascript" src="../../javascripts/components/Navbar.js"></script>
   </body>
 </html>
