improves navbar component

--- a/views/platform/index.ejs
+++ b/views/platform/index.ejs
@@ -3,7 +3,7 @@
 <% include ../partials/header%>
   <body>
     <div id="viewContainer" class="view-container">
-      <div class="" id="navbar">
+      <div class="" id="navbar" src="ciao">
       </div>
     </div>
     <% include ../partials/footer %>
