--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <head>
   <meta charset="UTF-8">
-  <title>Lorenc Shop</title>
+  <title><%= title %></title>
   <link href="../../stylesheets/main.css" rel="stylesheet"/>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <script type="text/javascript" src="../../javascripts/jquery.min.js"></script>
