--- a/views/platform/index.ejs
+++ b/views/platform/index.ejs
@@ -3,9 +3,13 @@
 <% include ../partials/header%>
   <body>
     <div id="viewContainer" class="view-container">
-      <div class="" id="navbar" src="ciao">
+      <div id="navbar" data-conf="<%=user.name%>" >
+
+
       </div>
     </div>
+
+
     <% include ../partials/footer %>
     <script type="text/javascript" src="../../javascripts/components/Navbar.js"></script>
   </body>
