refactor to responsive design step 2

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -192,6 +192,9 @@ a:hover {
   text-decoration: none;
   color: #4f4b4b; }
 
+.view-container {
+  padding: 20px 20px; }
+
 .ls-button {
   display: inline-block;
   vertical-align: middle;
