--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -161,6 +161,42 @@ html {
   box-sizing: border-box;
 }
 
+input[type="text"] {
+  display: block;
+  margin: 0;
+  width: 100%;
+  font-family: sans-serif;
+  font-size: 18px;
+  appearance: none;
+  box-shadow: none;
+  border-radius: 5px;
+  border: none;
+  padding: 10px;
+}
+
+input[type="text"]:focus {
+  outline: none;
+  border-left: 1px solid grey;
+}
+
+input[type="password"] {
+  display: block;
+  margin: 0;
+  width: 100%;
+  font-family: sans-serif;
+  font-size: 18px;
+  appearance: none;
+  box-shadow: none;
+  border-radius: 5px;
+  border: none;
+  padding: 10px;
+}
+
+input[type="password"]:focus {
+  outline: none;
+  border-left: 1px solid grey;
+}
+
 
 html {
   height: 100%;
