--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -174,6 +174,14 @@ input[type="password"] {
   border: none;
   padding: 10px; }
 
+.button {
+  padding: 10px;
+  border: 1px solid;
+  text-decoration: none; }
+
+.button:hover {
+  background-color: green; }
+
 input[type="password"]:focus {
   outline: none;
   border-left: 1px solid grey; }
