wip improving form responsivenes

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -105,8 +105,8 @@ blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: '';
-  content: none; }
+    content: none;
+}
 
 a {
   margin: 0;
@@ -152,7 +152,6 @@ input[type="text"] {
   width: 100%;
   font-family: sans-serif;
   font-size: 18px;
-  appearance: none;
   box-shadow: none;
   border-radius: 5px;
   border: none;
@@ -168,7 +167,6 @@ input[type="password"] {
   width: 100%;
   font-family: sans-serif;
   font-size: 18px;
-  appearance: none;
   box-shadow: none;
   border-radius: 5px;
   border: none;
@@ -251,7 +249,7 @@ a:hover {
   display: table;
   vertical-align: middle;
   border-collapse: separate;
-  border-spacing: 10px 0px;
+    border-spacing: 10px 0;
   background-color: #406f7c; }
   .ls-navbar li {
     display: table-cell;
@@ -284,7 +282,9 @@ a:hover {
   padding: 10px; }
 
 .login-container {
-  display: table;
+    display: inline-block;
   vertical-align: middle;
-  margin-right: auto;
-  margin-left: auto; }
+    position: relative;
+    top: 50%;
+    left: 50%;
+}
