wip improving form errors styles step 2

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,6 +1,7 @@
 @import "base/base";
 @import "variables/variables";
 @import "base/buttons";
+@import "components/form";
 @import "components/navbar";
 @import "components/footer";
 @import "components/login";
