wip improving form errors styles step 4

--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -267,4 +267,8 @@ a:hover {
 
 .view-container{
   padding: 20px 20px;
+  width: 1250px;
+  height: 900px;
+  max-width: 90%;
+  max-height: 90%;
 }
