--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -233,7 +233,12 @@ a:hover {
   color: #4f4b4b; }
 
 .view-container {
-  padding: 20px 20px; }
+    padding: 20px 20px;
+    width: 1250px;
+    height: 900px;
+    max-width: 90%;
+    max-height: 90%;
+}
 
 .ls-button {
   display: inline-block;
@@ -300,5 +305,5 @@ a:hover {
   display: inline-block;
   vertical-align: middle;
   position: relative;
-  top: 50%;
-  left: 50%; }
+    padding-left: 30%;
+}
