--- a/views/platform/index.ejs
+++ b/views/platform/index.ejs
@@ -3,7 +3,7 @@
 <% include ../partials/header%>
   <body>
     <div id="viewContainer" class="view-container">
-      <div id="navbar" data-conf=<%-JSON.stringify(user)%> >
+      <div id="navbar" user=<%- JSON.stringify(user) %>>
       </div>
     </div>
 
