refactoring main layout

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Lorenc Shop</title>
-  <link href="../../stylesheets/main.css" rel="stylesheet"/>
-    <script type="text/javascript" src="../../javascripts/jquery.min.js"></script>
-    <script type="text/javascript" src="../../javascripts/react.js"></script>
-    <script type="text/javascript" src="../../javascripts/marked.min.js"></script>
-    <script type="text/javascript" src="../../javascripts/moment.js"></script>
-</head>
+<% include partials/header %>
 <body>
 <header>
   <nav>
@@ -30,8 +22,9 @@
     </ul>
   </nav>
 </header>
-    <div class="" id="viewContainer"></div>
+<div class="view-container" id="viewContainer"></div>
 
 </div>
+<% include partials/footer %>
 </body>
 </html>
