--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -311,4 +311,6 @@ a:hover {
   display: inline-block;
   vertical-align: middle;
   position: relative;
-  padding-left: 30%; }
+
+    left: 50%;
+}
