first test css refactoring

--- a/styles/variables/_variables.scss
+++ b/styles/variables/_variables.scss
@@ -9,7 +9,7 @@ $base__line: 20 !default;
 $ls-green-primary: #318817;
 $ls-green-secondary: #2ded85;
 $ls-white-primary: #e4d7d7;
-$ls-navbar-color: #406f7c;
+$ls-navbar-color: #2ca6c7;
 
 @function calc-em($target, $context: $base__font-size) {
     @return ($target / $context) * 1em;
