--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -269,7 +269,7 @@ a:hover {
   vertical-align: middle;
   border-collapse: separate;
   border-spacing: 10px 0px;
-  background-color: #406f7c;
+  background-color: #2ca6c7;
   padding: 20px; }
   .ls-navbar li {
     display: table-cell;
@@ -303,7 +303,7 @@ a:hover {
   vertical-align: middle;
   position: relative;
   color: #e4d7d7;
-  background-color: #406f7c;
+  background-color: #2ca6c7;
   text-align: center;
   padding: 10px; }
 
@@ -311,6 +311,4 @@ a:hover {
   display: inline-block;
   vertical-align: middle;
   position: relative;
-
-    left: 50%;
-}
+  padding-left: 30%; }
