--- a/client/apps/navbar/templates/navbar-template.html
+++ b/client/apps/navbar/templates/navbar-template.html
@@ -1,1 +1,18 @@
-lorenc_shop , work in progress , sorry     :) 
+<nav class="navbar navbar-light">
+  <a href="#" class="navbar-brand"> Lorenc Shop</a>
+  <ul class="nav  navbar-nav">
+
+    <li class="nav-item active">
+      <a href="#" class="nav-link "> Home</a>
+    </li>
+
+    <li class="nav-item ">
+      <a href="#" class="nav-link "> products</a>
+    </li>
+
+    <li class="nav-item ">
+      <a href="#" class="nav-link "> offers</a>
+    </li>
+
+  </ul>
+</nav>
