--- a/client/apps/navbar/templates/navbar-template.html
+++ b/client/apps/navbar/templates/navbar-template.html
@@ -7,7 +7,7 @@
     </li>
 
     <li class="nav-item ">
-      <a href="#" class="nav-link "> products</a>
+      <a href="products" class="nav-link "> products</a>
     </li>
 
     <li class="nav-item ">
