finish index page

--- a/client/apps/home/templates/home-template.html
+++ b/client/apps/home/templates/home-template.html
@@ -1,3 +1,6 @@
-<div class="">
-  <IL>BUE</IL>
+<div class="ls-home container">
+
+<div class="ls-home-introduction jumbotron">
+ <h2>Welcome in my Shop!</h2>
+</div>
 </div>
