init products subapp

--- a/client/apps/navbar/templates/navbar-template.html
+++ b/client/apps/navbar/templates/navbar-template.html
@@ -7,11 +7,11 @@
     </li>
 
     <li class="nav-item ">
-      <a href="products" class="nav-link "> products</a>
+      <a href="/#products" class="nav-link "> products</a>
     </li>
 
     <li class="nav-item ">
-      <a href="#" class="nav-link "> offers</a>
+      <a href="/#offers" class="nav-link "> offers</a>
     </li>
 
   </ul>
