--- a/client/apps/products/templates/productsList-template.html
+++ b/client/apps/products/templates/productsList-template.html
@@ -1,6 +1,6 @@
 <div class='ls-product-list'>
   product list view
-  <ul >
-    <li>item</li>
+  <ul class="ls-product-list-container">
+
   </ul>
 </div>
