--- a/client/apps/products/templates/productsList-template.html
+++ b/client/apps/products/templates/productsList-template.html
@@ -2,5 +2,6 @@
   product list view
   <ul class="ls-product-list-container">
 
+   <% _.each(item, function(item, index) { %>  <p><%= item %></p> <% }); %>
   </ul>
 </div>
