adds bootstrap list skinning

--- a/client/apps/products/templates/product-template.html
+++ b/client/apps/products/templates/product-template.html
@@ -1,3 +1,6 @@
-<li>
-  <%- price%>
+<li class="list-group-item">
+  <span>title : <%- title %></span>
+  <span>description: <%- description %></span>
+  <span>price: <%- price %></span>
+  <button type="button" class="btn btn-info btn-sm"> detail </button>
 </li>
