--- a/client/apps/products/templates/productsList-template.html
+++ b/client/apps/products/templates/productsList-template.html
@@ -1,5 +1,5 @@
 <div class='ls-product-list'>
   product list view
-  <ul class="ls-product-list-container">
+  <ul class="ls-product-list-container list-group">
   </ul>
 </div>
