--- a/client/apps/products/templates/product-template.html
+++ b/client/apps/products/templates/product-template.html
@@ -1,4 +1,4 @@
-<li class="list-group-item">
+<li class="list-group-item" data-id=" <%= title %>">
   <span>title : <%- title %></span>
   <span>description: <%- description %></span>
   <span>price: <%- price %></span>
