improves profile structure

--- a/client/apps/navbar/templates/navbar-template.html
+++ b/client/apps/navbar/templates/navbar-template.html
@@ -14,5 +14,9 @@
       <a href="/#offers" class="nav-link "> offers</a>
     </li>
 
+    <li class="nav-item ">
+      <a href="/#profile" class="nav-link "> profile</a>
+    </li>
+
   </ul>
 </nav>
