--- a/client/apps/navbar/templates/navbar-template.html
+++ b/client/apps/navbar/templates/navbar-template.html
@@ -15,7 +15,7 @@
     </li>
 
     <li class="nav-item ">
-      <a href="/#profile" class="nav-link "> profile</a>
+      <a href="/#profile/2" class="nav-link "> profile</a>
     </li>
 
   </ul>
