--- a/client/apps/profile/templates/profileApp-template.html
+++ b/client/apps/profile/templates/profileApp-template.html
@@ -6,6 +6,13 @@
     toolbar
   </div>
   <div class="ls-profileAppContent">
-    content
+    <div class="row">
+      <div class="col-md-2">
+        <img src="{%%}" alt="" />
+      </div>
+      <div class="col-md-10">
+        resto
+      </div>
+    </div>
   </div>
 </div>
