FL-13 removes not necessary code

--- a/client/apps/profile/templates/profileApp-template.html
+++ b/client/apps/profile/templates/profileApp-template.html
@@ -8,7 +8,7 @@
   <div class="ls-profileAppContent">
     <div class="row">
       <div class="col-md-2">
-        <img src="{%%}" alt="" />
+        <img src="" alt="" />
       </div>
       <div class="col-md-10">
         resto
