adds static html template

--- a/client/apps/profile/templates/profileApp-template.html
+++ b/client/apps/profile/templates/profileApp-template.html
@@ -11,7 +11,23 @@
         <img src="" alt="" />
       </div>
       <div class="col-md-10">
-        resto
+        <div class="row">
+            <div class="col-sm-2">
+            nome
+            </div>
+            <div class="col-sm-2"> cognome</div>
+        </div>
+        <div class="row">
+          <div class="col-sm-2">loremc</div>
+          <div class="col-sm-2">lorem</div>
+
+        </div>
+        <div class="row">
+          <div class="col-sm-2">loremc</div>
+          <div class="col-sm-2">loremc</div>
+
+        </div>
+
       </div>
     </div>
   </div>
