adds basic dynamic profile model

--- a/client/apps/profile/templates/profileApp-template.html
+++ b/client/apps/profile/templates/profileApp-template.html
@@ -8,26 +8,21 @@
   <div class="ls-profileAppContent">
     <div class="row">
       <div class="col-md-2">
-        <img src="" alt="" />
+        <img src="<%-photoUrl%>" alt="" />
       </div>
       <div class="col-md-10">
         <div class="row">
-            <div class="col-sm-2">
-            nome
-            </div>
-            <div class="col-sm-2"> cognome</div>
+            <div class="col-sm-2">name</div>
+            <div class="col-sm-2"><%-name%></div>
         </div>
         <div class="row">
-          <div class="col-sm-2">loremc</div>
-          <div class="col-sm-2">lorem</div>
-
+          <div class="col-sm-2">surname</div>
+          <div class="col-sm-2"><%-surname%></div>
         </div>
         <div class="row">
-          <div class="col-sm-2">loremc</div>
-          <div class="col-sm-2">loremc</div>
-
+          <div class="col-sm-2">nationality</div>
+          <div class="col-sm-2"><%-nationality%></div>
         </div>
-
       </div>
     </div>
   </div>
